# Chess

./: CMakeLists.txt  LICENSE  README.md
src/: chess.cpp  chess.hpp  main.cpp  movelogic.cpp  movelogic.hpp  piece.hpp  ui.cpp  ui.hpp
